Project/project1/test/t01_12012138.out
Error type B at Line 3: Missing semicolon ';'
Error type B at Line 5: Missing semicolon ';'
Error type B at Line 13: Missing semicolon ';'
